--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,59 @@ body {
   color: #434455;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+ul,
+ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.container {
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+
+.header .container {
+  display: flex;
+  align-items: center;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+
 .header-logo-start {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -14,6 +67,9 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-decoration: none;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  margin-right: 76px;
 }
 
 .header-logo-finish {
@@ -28,6 +84,11 @@ body {
   color: #404bbf;
 }
 
+.header-list {
+  display: flex;
+  gap: 40px;
+}
+
 .header-list-specifical {
   color: #2e2f42;
   font-weight: 500;
@@ -35,10 +96,18 @@ body {
   text-transform: capitalize;
   letter-spacing: 0.02em;
   line-height: 1.5;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .adress-navigation {
   font-style: normal;
+  margin-left: auto;
+}
+
+.header-address {
+  display: flex;
+  gap: 40px;
 }
 
 .address-info {
@@ -58,6 +127,8 @@ body {
 
 .main-section {
   background-color: #2e2f42;
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 
 .main-section-title {
@@ -67,6 +138,9 @@ body {
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  max-width: 496px;
+  margin: 0 auto;
+  margin-bottom: 48px;
 }
 
 .main-section-button {
@@ -76,6 +150,15 @@ body {
   color: #fff;
   background-color: #4d5ae5;
   cursor: pointer;
+  display: block;
+  align-items: center;
+  border-radius: 4px;
+  margin-right: auto;
+  margin-left: auto;
+  height: 56px;
+  min-width: 169px;
+  margin-top: 48px;
+  border: none;
 }
 
 .main-section-button:hover,
@@ -83,10 +166,14 @@ body {
   background-color: #404bbf;
 }
 
-ul {
-  list-style: none;
-  padding-left: 0;
-  margin-left: 0;
+.list-two {
+  display: flex;
+  gap: 24px;
+}
+
+.list-item {
+  margin-top: 120px;
+  margin-bottom: 120px;
 }
 
 .section-two-title {
@@ -95,6 +182,7 @@ ul {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .text {
@@ -114,10 +202,26 @@ ul {
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
+  margin-bottom: 72px;
+  padding-top: 120px;
 }
 
 .team-list {
-  background-color: #fff;
+  display: flex;
+  gap: 24px;
+  background-color: #f4f4fd;
+}
+
+.team-item {
+  background-color: #ffffff;
+  flex-basis: calc((100% - 72px) / 4);
+  border-radius: 0 0 4px 4px;
+  margin-bottom: 120px;
+}
+
+.team-container {
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .team-name {
@@ -127,6 +231,8 @@ ul {
   letter-spacing: 0.02em;
   color: #2e2f42;
   text-align: center;
+  margin-top: 32px;
+  margin-bottom: 8px;
 }
 
 .text-team {
@@ -134,6 +240,24 @@ ul {
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
+  margin-bottom: 32px;
+}
+
+.portfolio-item {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+  margin-bottom: 120px;
+}
+
+.portfolio-container {
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+  padding: 32px 16px;
+  width: 360px;
+  height: 120px;
 }
 
 .main-title-portfolio {
@@ -143,6 +267,8 @@ ul {
   text-align: center;
   text-transform: capitalize;
   color: #2e2f42;
+  margin-top: 120px;
+  margin-bottom: 72px;
 }
 
 .title-portfolio {
@@ -151,10 +277,13 @@ ul {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .section-footer {
   background-color: #2e2f42;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .footer-logo-start {
@@ -166,6 +295,8 @@ ul {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-decoration: none;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .footer-logo-finish {
@@ -176,4 +307,5 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  max-width: 264px;
 }
