--- a/css/styles.css
+++ b/css/styles.css
@@ -52,10 +52,13 @@ img {
   margin: 0 auto;
 }
 
+.header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
 .header .container {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #e7e9fc;
 }
 
 .header-nav {
@@ -228,7 +231,7 @@ img {
   border-radius: 0 0 4px 4px;
 }
 
-.team-container {
+.team-group {
   padding-top: 32px;
   padding-bottom: 32px;
 }
@@ -280,6 +283,7 @@ img {
   text-align: center;
   text-transform: capitalize;
   color: #2e2f42;
+  margin-bottom: 72px;
 }
 
 .title-portfolio {
