--- a/css/styles.css
+++ b/css/styles.css
@@ -232,8 +232,7 @@ img {
 }
 
 .team-group {
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding: 32px 0;
 }
 
 .team-name {
@@ -243,7 +242,6 @@ img {
   letter-spacing: 0.02em;
   color: #2e2f42;
   text-align: center;
-  margin-top: 32px;
   margin-bottom: 8px;
 }
 
@@ -252,7 +250,6 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
-  margin-bottom: 32px;
 }
 
 .section-portfolio {
